# inari

./: .gitignore  README.md  pyproject.toml
inari/: data.py  layers.py  loss.py  model.py  transforms.py  utils.py
preprocess/: create_dataset_categorical.py
scripts/: train_cox2.py
src/: simplesubgmn.py  train_cox2.py
src/inari/: data.py  layers.py  model.py  transforms.py  utils.py
