[tool.poetry]
name = "inari"
version = "0.1.0"
description = ""
authors = ["matt <matt76k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
torch = "^2.0.1"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
torch-geometric = "^2.3.1"
einops = "^0.6.1"
torchvision = "^0.15.2"
torcheval = "^0.0.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
poethepoet = "^0.21.1"
pyproject-flake8 = "^6.0.0.post1"
mypy = "^1.4.1"

[tool.flake8]
extend-ignore = "E203,E501,"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
py_version = 310
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poe.env]
SRC_DIR = "src inari"

[tool.poe.tasks]
lint = "poetry run pflake8 $SRC_DIR"
black = "poetry run black $SRC_DIR"
isort = "poetry run isort $SRC_DIR"
format = ["isort", "black", "lint"]

[tool.poe.tasks.sparse]
cmd = "pip install torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.0.0+cpu.htm"
#env = {WITH_METIS = "1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
