[project]
name = "inari"
version = "0.1.0"
description = ""
authors = [{ name = "matt", email = "matt76k@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.0.1,<3",
    "numpy>=1.25.1,<2",
    "pandas>=2.0.3,<3",
    "matplotlib>=3.7.1,<4",
    "scipy>=1.10.1,<2",
    "torch-geometric>=2.3.1,<3",
    "einops>=0.6.1,<1",
    "torchvision>=0.15.2,<1",
    "torcheval>=0.0.6,<1",
    "scikit-learn>=1.3.0,<2",
    "networkx>=3.0,<4",
    "tqdm>=4.65.0,<5",
]

[dependency-groups]
dev = [
    "flake8>=6.0.0,<7",
    "black>=23.7.0,<25",
    "isort>=5.12.0,<6",
    "pyproject-flake8>=6.0.0.post1,<7",
    "mypy>=1.4.1,<2",
]

[tool.flake8]
extend-ignore = "E203,E501,"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
py_version = 310
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
